; ModuleID = '/home/carl/AnghaBench/8cc/extr_utiltest.c_test_file.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_utiltest.c_test_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"abc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_file() #0 {
  %1 = call i32 @make_file_string(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @stream_push(i32 %1)
  %3 = call i64 (...) @readc()
  %4 = call i32 @assert_int(i8 signext 97, i64 %3)
  %5 = call i64 (...) @readc()
  %6 = call i32 @assert_int(i8 signext 98, i64 %5)
  %7 = call i32 @unreadc(i8 signext 98)
  %8 = call i32 @unreadc(i8 signext 97)
  %9 = call i64 (...) @readc()
  %10 = call i32 @assert_int(i8 signext 97, i64 %9)
  %11 = call i64 (...) @readc()
  %12 = call i32 @assert_int(i8 signext 98, i64 %11)
  %13 = call i64 (...) @readc()
  %14 = call i32 @assert_int(i8 signext 99, i64 %13)
  %15 = call i64 (...) @readc()
  %16 = call i32 @assert_int(i8 signext 10, i64 %15)
  %17 = call i32 @unreadc(i8 signext 10)
  %18 = call i64 (...) @readc()
  %19 = call i32 @assert_int(i8 signext 10, i64 %18)
  %20 = call i64 (...) @readc()
  %21 = icmp slt i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert_true(i32 %22)
  ret void
}

declare dso_local i32 @stream_push(i32) #1

declare dso_local i32 @make_file_string(i8*) #1

declare dso_local i32 @assert_int(i8 signext, i64) #1

declare dso_local i64 @readc(...) #1

declare dso_local i32 @unreadc(i8 signext) #1

declare dso_local i32 @assert_true(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
